--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ Flask==1.0.3
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
-mkl-fft==1.0.12
-mkl-random==1.0.2
+mkl-fft
+mkl-random
 numpy==1.16.4
 opencv-python==4.1.0.25
 pycparser==2.19
