--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 # mkl-fft
 # mkl-random
-numpy==1.16.4
-opencv-python==4.1.0.25
-pycparser==2.19
-torch==1.0.1
-Werkzeug==0.15.4
+numpy
+opencv-python
+pycparser
+torch
+Werkzeug
